# s2cpy

./: .gitignore  AGENTS.md  Dockerfile  README.md  build.py  conftest.py  generate_protobuf.py  pyproject.toml
.github/: doc.instructions.md  project.instructions.md
.github/agents/: architect.agent.md  developer.agent.md
.github/workflows/: dev.yml  release.yml
config/: config.example.toml  config.sync.toml  config.toml  config.untest.toml
db/: sync_db_initial.sql
docs/guide/: polymarket简单说明.md
examples/: GLFT_example.py  single_server_live_example.py  sync_client.py  sync_server_app.py
proto/: message.proto
scripts/: generate_proto.py
src/proto/: history_data.proto  message.proto
src/s2cpy/: __init__.py
src/s2cpy/algorithms/: glfts.py
src/s2cpy/core/: engine.py  monitor.py
src/s2cpy/data_feeds/: ploymarket_feed.py
src/s2cpy/exceptions/: ploymarket_exceptions.py
src/s2cpy/exchange/: polymarket_api.py  polymarket_io.py  polymarket_tools.py  polymarket_ws.py
src/s2cpy/infrastructure/: async_tools.py  http_client.py  settings.py  time.py
src/s2cpy/model/: common_consts.py  core_model.py  polymarke_core.py  polymarket_io.py  polymarket_ws_io.py
src/s2cpy/rpc/: client.py  server.py  sync_server.py
src/s2cpy/services/: polymarket_service.py
src/s2cpy/strategy/: demo_strategies.py  glft_market_strategy.py  polymarket_one_market_strategy.py
tests/: test_algorithms_glft.py  test_core_model_asset.py  test_data_feeds_ploymarket.py  test_infrastructure_time.py  test_ploymarket.py  test_ploymarket_manual.py  test_polymarket_liquidity_provider_accounts.py  test_polymarket_tools_ticksize.py  test_polymarket_ws_manual.py  test_settings.py  test_time_interval.py
