[project]
name = "s2cpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chandlersong", email = "chandler605@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "nautilus-trader[polymarket]>=1.225.0",
    "requests>=2.33.1",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
