[project]
name = "s2cpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chandlersong", email = "chandler605@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "loguru>=0.7.3",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "tenacity>=9.1.4",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"                    # 推荐：自动识别 async def test_ 函数
asyncio_default_fixture_loop_scope = "function"   # 每个测试独立的事件循环，更安全
