[project]
name = "s2cpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chandlersong", email = "chandler605@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "blinker>=1.9.0",
    "eth-abi>=5.2.0",
    "eth-utils>=6.0.0",
    "loguru>=0.7.3",
    "np>=1.0.2",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "py-builder-relayer-client>=0.0.2",
    "py-builder-signing-sdk>=0.0.2",
    "py-clob-client-v2>=1.0.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "scipy>=1.17.1",
    "scipy-stubs~=1.17.1",
    "tenacity>=9.1.4",
    "web3>=7.16.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-env>=1.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"                    # 推荐：自动识别 async def test_ 函数
asyncio_default_fixture_loop_scope = "function"   # 每个测试独立的事件循环，更安全
markers = [
    "manual: 手工跑的方式，主要是用于一些用于演示，或者看实际情况的场景。",
    # 你可以加多个
    # "slow: slow running tests",
    # "integration: integration tests",
]

env = [
    "ENV=untest", # 默认使用 testing 环境跑测试
    "DEBUG=true",
]
required_plugins = ["pytest-env"]
# 默认运行时自动排除 manual 测试
addopts = [
    "-m", "not manual",
]
